[polybar] cleanup mpd module

--- a/negi3wm/.config/polybar/decor.cfg
+++ b/negi3wm/.config/polybar/decor.cfg
@@ -27,7 +27,7 @@ content-background = ${color.mgf}
 
 [module/start-mpd]
 type = custom/text
-content = "%{T3}%{F#005f87}╲ %{F-}%{T-}"
+content = "%{T4}%{F#005f87}╲"
 content-background = ${color.mgf}
 
 [module/left-end-top]
