--- a/negi3wm/.config/picom/picom.conf
+++ b/negi3wm/.config/picom/picom.conf
@@ -1,40 +1,33 @@
-inactive-opacity : 1.0;
-active-opacity : 1.0;
-frame-opacity : 1.0;
-vsync : false;
-fading : false;
-unredir-if-possible : true;
-detect-rounded-corners : true;
-detect-client-opacity : true;
-detect-transient : true;
-detect-client-leader : true;
-use-damage : true;
-refresh-rate : 0;
-inactive-dim : 0.0;
-
-experimental-backends : true;
-glx-no-rebind-pixmap : true;
-
-glx-no-stencil : true;
-glx-swap-method : 2;
-
-# Needed on nvidia-drivers with GLX backend for some users.
-xrender-sync-fence : true;
-
-blur : { method = "dual_kawase"; strength = 8.5; }
-
-wintypes : {
-    dock : { opacity : 0.9; shadow : false; full-shadow : false; };
-    menu : { fade : false; opacity : false; shadow : false; full-shadow : false; };
-    dropdown_menu : { opacity : 0.89; fade : false; shadow : false; full-shadow : false; };
-    popup_menu : { opacity : 0.89; fade : false; shadow : false; full-shadow : false; };
-    utility : { fade : false; opacity : false; shadow : false; full-shadow : false; };
-    tooltip : { fade : false; opacity : false; shadow : false; full-shadow : false; };
+inactive-opacity: 1.0;
+active-opacity: 1.0;
+frame-opacity: 1.0;
+vsync: false;
+fading: false;
+unredir-if-possible: true;
+detect-rounded-corners: false;
+detect-client-opacity: true;
+detect-transient: true;
+detect-client-leader: true;
+use-damage: true;
+refresh-rate: 0;
+inactive-dim: 0.0;
+experimental-backends: true;
+glx-no-rebind-pixmap: true;
+glx-no-stencil: true;
+glx-swap-method: 2;
+glx-use-gpushader4: true;
+xrender-sync-fence: true;
+blur: { method = "dual_kawase"; strength = 8.5; }
+wintypes: {
+    dock: { opacity: 1.0; shadow: false; full-shadow: false; };
+    menu: { fade: false; opacity: false; shadow: false; full-shadow: false; };
+    utility: { fade: false; opacity: false; shadow: false; full-shadow: false; };
+    tooltip: { fade: false; opacity: false; shadow: false; full-shadow: false; };
+    dropdown_menu: { opacity: 0.89; fade: false; shadow: false; full-shadow: false; };
+    popup_menu: { opacity: 0.89; fade: false; shadow: false; full-shadow: false; };
 };
-
-opacity-exclude : [ "class_g = 'mpv'", "class_i = 'mpv'", ];
-
-focus-exclude : [
+opacity-exclude: [ "class_g = 'mpv'", "class_i = 'mpv'", ];
+focus-exclude: [
     "class_g = 'Polybar'",
     "name *?= 'Steam'",
     "class_g *?= 'Steam'",
@@ -42,25 +35,19 @@ focus-exclude : [
     "class_g = 'slop'",
     "class_g = 'rofi'",
 ];
-
-# Exclude conditions for background blur.
-blur-background-exclude : [
+blur-background-exclude: [
     "window_type = 'desktop'",
     "class_g = 'slop'",
     "class_i = 'term'",
     "class_i = 'nwim'",
 ];
-
-opacity-rule : [
-    "0:_NET_WM_STATE@:32a *= '_NET_WM_STATE_HIDDEN'",
-];
-
-#shadow : true;
-shadow-radius : +9.0;
-shadow-offset-x : -9.0;
-shadow-offset-y : -9.0;
-shadow-opacity : +0.8;
-shadow-exclude-reg : "x10+0+0";
-shadow-red : 0.0; # Red color value of shadow. (0.0 - 1.0, defaults to 0)
-shadow-green : 0.3; # Green color value of shadow. (0.0 - 1.0, defaults to 0)
-shadow-blue : 0.35; # Blue color value of shadow. (0.0 - 1.0, defaults to 0)
+opacity-rule: [ "0:_NET_WM_STATE@:32a *= '_NET_WM_STATE_HIDDEN'" ];
+shadow: true;
+shadow-radius: +9.0;
+shadow-offset-x: -9.0;
+shadow-offset-y: -9.0;
+shadow-opacity: +0.8;
+shadow-exclude-reg: "x10+0+0";
+shadow-red: 0.0;
+shadow-green: 0.3;
+shadow-blue: 0.35;
