[picom] revert shadows

--- a/negi3wm/.config/picom/picom.conf
+++ b/negi3wm/.config/picom/picom.conf
@@ -42,7 +42,7 @@ blur-background-exclude: [
     "class_i = 'nwim'",
 ];
 opacity-rule: [ "0:_NET_WM_STATE@:32a *= '_NET_WM_STATE_HIDDEN'" ];
-shadow: true;
+shadow: false;
 shadow-radius: +9.0;
 shadow-offset-x: -9.0;
 shadow-offset-y: -9.0;
