[picom] optimize settings

--- a/negi3wm/.config/picom/picom.conf
+++ b/negi3wm/.config/picom/picom.conf
@@ -14,10 +14,9 @@ inactive-dim: 0.0;
 experimental-backends: true;
 glx-no-rebind-pixmap: true;
 glx-no-stencil: true;
-glx-swap-method: 2;
-glx-use-gpushader4: true;
-xrender-sync-fence: true;
-blur: { method = "dual_kawase"; strength = 8.5; }
+glx-swap-method: 0;
+transparent-clipping: false;
+xrender-sync-fence: false;
 wintypes: {
     dock: { opacity: 1.0; shadow: false; full-shadow: false; };
     menu: { fade: false; opacity: false; shadow: false; full-shadow: false; };
@@ -41,8 +40,9 @@ blur-background-exclude: [
     "class_i = 'term'",
     "class_i = 'nwim'",
 ];
+blur: { method = "dual_kawase"; strength = 8.5; }
 opacity-rule: [ "0:_NET_WM_STATE@:32a *= '_NET_WM_STATE_HIDDEN'" ];
-shadow: false;
+shadow: true;
 shadow-radius: +9.0;
 shadow-offset-x: -9.0;
 shadow-offset-y: -9.0;
