[iosevka] update settings

--- a/negi3wm/.config/iosevka_profile/private-build-plans.toml
+++ b/negi3wm/.config/iosevka_profile/private-build-plans.toml
@@ -1,6 +1,6 @@
 [buildPlans.iosevka]
 family = "Iosevka"
-spacing = "term"
+spacing = "fontconfig-mono"
 serifs = "sans"
 
 [buildPlans.iosevka.variants.design]
@@ -13,10 +13,10 @@ capital-j = "serifed-both-sides"
 capital-k = "curly"
 capital-l = "motion-serifed"
 capital-m = "flat-bottom"
-capital-q = "straight"
+capital-q = "taily"
 capital-r = "curly"
 capital-y = "curly"
-capital-z = "curly-with-horizontal-crossbar"
+capital-z = "curly-motion-serifed"
 a = "doublestorey"
 b = "toothed"
 d = "toothed"
@@ -24,7 +24,7 @@ e = "flat-crossbar"
 f = "serifless"
 g = "doublestorey"
 h = "straight"
-i = "serifed-tailed"
+i = "serifed-flat-tailed"
 j = "serifed"
 k = "straight"
 l = "serifed"
@@ -35,23 +35,23 @@ q = "straight"
 r = "serifless"
 t = "standard"
 u = "toothed"
-v = "straight"
+v = "curly"
 w = "straight"
 x = "straight"
-y = "straight"
+y = "curly-turn"
 z = "standard"
 lambda = "curly"
-cyrl-capital-u = "cursive-flat-hook"
+cyrl-capital-u = "curly-turn"
 one = "base-long-top-serif"
 two = "curly-neck"
 three = "flattop"
 four = "semi-open-non-crossing"
 six = "straight-bar"
-seven = "crossbar"
+seven = "serifed"
 eight = "crossing"
 nine = "open-contour"
 asterisk = "hexlow"
-underscore = "low"
+underscore = "high"
 paragraph-sign = "low"
 paren = "normal"
 brace = "curly"
