--- a/negi3wm/.config/iosevka_profile/private-build-plans.toml
+++ b/negi3wm/.config/iosevka_profile/private-build-plans.toml
@@ -63,5 +63,35 @@ lig-ltgteq = "slanted"
 ascii-single-quote = "straight"
 ascii-grave = "straight"
 
+[buildPlans.iosevka-custom.weights.regular]
+shape = 400
+menu = 400
+css = 400
+
+[buildPlans.iosevka-custom.weights.medium]
+shape = 500
+menu = 500
+css = 500
+
+[buildPlans.iosevka-custom.weights.semibold]
+shape = 600
+menu = 600
+css = 600
+
+[buildPlans.iosevka-custom.weights.bold]
+shape = 700
+menu = 700
+css = 700
+
+[buildPlans.iosevka-custom.weights.extrabold]
+shape = 800
+menu = 800
+css = 800
+
+[buildPlans.iosevka-custom.weights.heavy]
+shape = 900
+menu = 900
+css = 900
+
   [buildPlans.iosevka.ligations]
   inherits = "fsharp"
