--- a/music/.config/ncmpcpp/config
+++ b/music/.config/ncmpcpp/config
@@ -75,11 +75,10 @@ active_window_border = "black"
 empty_tag_marker = "⟬…⟭"
 regular_expressions = "extended"
 #--=[ Visualizer ]=---------------
-visualizer_fifo_path = "/tmp/audio.fifo"
+visualizer_data_source = "/tmp/audio.fifo"
 visualizer_output_name = "my_fifo"
 visualizer_in_stereo = "no"
 visualizer_color = 091,097,108,104,99,105,111
-visualizer_sync_interval = "10"
 visualizer_look = "▞▋"
 visualizer_type = ellipse
 #  vim: set ts=2 sw=2 tw=0 :
