[polybar] more simple config

--- a/negi3wm/.config/polybar/modules.cfg
+++ b/negi3wm/.config/polybar/modules.cfg
@@ -17,7 +17,7 @@ tail = true
 
 [module/time]
 type = internal/date
-date = %{F#A9C3F5}%H%{F#657491}:%{F#A9C3F5}%M%%{F-}
+date = "${templates.date}"
 interval = 5
 format-suffix = " "
 format-background = ${color.mgf}
@@ -25,13 +25,13 @@ format-background = ${color.mgf}
 [module/xkeyboard]
 type = internal/xkeyboard
 blacklist-0 = num lock
-label-layout = %{F#7EBBFC}%layout%%{F-}
+label-layout = ${templates.keyboard_layout}
 label-indicator-padding = 0
 label-indicator-background = ${color.mgf}
 label-indicator-underline = ${color.mgf}
 format-background = ${color.mgf}
 format-suffix = ""
-format-prefix = " %{T4 F#8BAAC7}%{T- F-} "
+format-prefix = "${templates.keyboard_prefix}"
 
 [module/network]
 type = internal/network
