--- a/music/.config/mpd/mpd.conf
+++ b/music/.config/mpd/mpd.conf
@@ -1,19 +1,19 @@
-music_directory                  "~/music"
-db_file                          "~/.config/mpd/mpd.db"
-pid_file                         "~/.config/mpd/mpd.pid"
-state_file                       "~/.config/mpd/mpdstate"
-sticker_file                     "~/.config/mpd/sticker.sql"
-log_file                         "/dev/null"
-user                             "neg"
-max_output_buffer_size           "524288"
-bind_to_address                  "::1"
-restore_paused                   "yes"
+music_directory "~/music"
+db_file "~/.config/mpd/mpd.db"
+pid_file "~/.config/mpd/mpd.pid"
+state_file "~/.config/mpd/mpdstate"
+sticker_file "~/.config/mpd/sticker.sql"
+log_file "/dev/null"
+user "neg"
+max_output_buffer_size "524288"
+bind_to_address "::1"
+restore_paused "yes"
 save_absolute_paths_in_playlists "yes"
-metadata_to_use                  "artist,album,title,track,name,genre,date"
-follow_inside_symlinks           "yes"
-connection_timeout               "2"
-replaygain                       "off"
-auto_update                      "yes"
+metadata_to_use "artist,album,title,track,name,genre,date"
+follow_inside_symlinks "yes"
+connection_timeout "2"
+replaygain "off"
+auto_update "yes"
 
 input {
     plugin "curl"
@@ -43,30 +43,30 @@ resampler {
 }
 
 audio_output {
-    type             "pulse"
-    media_role       "music"
-    name             "Pulseaudio"
+    type "pulse"
+    media_role "music"
+    name "Pulseaudio"
 }
 
-audio_output            {
-    type                "alsa"
-    name                "VMV D1 USB2.0"
-    device              "hw:3,0"
-    auto_resample       "yes"
-    auto_format         "yes"
-    auto_channels       "yes"
+audio_output {
+    type "alsa"
+    name "VMV D1 USB2.0"
+    device "jackplugmpd"
+    auto_resample "yes"
+    auto_format "yes"
+    auto_channels "yes"
     replay_gain_handler "none"
-    mixer_type          "hardware"
-    dsd_native          "yes"
-    dop                 "no"
-    tags                "yes"
+    mixer_type "hardware"
+    dsd_native "yes"
+    dop "no"
+    tags "yes"
 #   format              "dsd256:2"
 #   period_time         "1"
 }
 
 audio_output {
-    type                 "fifo"
-    name                 "FIFO"
-    path                 "/tmp/audio.fifo"
-    format               "44100:16:2"
+    type "fifo"
+    name "FIFO"
+    path "/tmp/audio.fifo"
+    format "44100:16:2"
 }
