[tmux] try tmux-jump

--- a/sys/.config/tmux/tmux.conf
+++ b/sys/.config/tmux/tmux.conf
@@ -25,6 +25,7 @@ set -g @plugin 'tmux-plugins/tpm'
 set -g @plugin 'tmux-plugins/tmux-resurrect'
 set -g @plugin 'tmux-plugins/tmux-continuum'
 set -g @plugin 'fcsonline/tmux-thumbs'
+set -g @plugin 'schasse/tmux-jump'
 set -g @plugin 'laktak/extrakto'
 set -g @continuum-restore 'on'
 run '~/.config/tmux/plugins/tpm/tpm'
