--- a/music/.config/pulse/daemon.conf
+++ b/music/.config/pulse/daemon.conf
@@ -1,11 +1,11 @@
 default-sample-format = s32le
-default-sample-rate = 44100
-alternate-sample-rate = 48000
+default-sample-rate = 48000
+alternate-sample-rate = 44100
 realtime-scheduling = true
 avoid-resampling = yes
 flat-volumes = false
 resample-method = soxr-vhq
 rlimit-rttime = -1
 exit-idle-time = -1
-default-fragments = 2
-default-fragment-size-msec = 25
+# default-fragments = 2
+# default-fragment-size-msec = 25
