[picom] make it faster with nvidia

--- a/negi3wm/.config/picom/picom.conf
+++ b/negi3wm/.config/picom/picom.conf
@@ -8,15 +8,14 @@ detect-rounded-corners: false;
 detect-client-opacity: true;
 detect-transient: true;
 detect-client-leader: true;
-use-damage: true;
-refresh-rate: 0;
 inactive-dim: 0.0;
-experimental-backends: true;
-glx-no-rebind-pixmap: true;
-glx-no-stencil: true;
-glx-swap-method: 0;
+glx-no-rebind-pixmap: false;
+glx-no-stencil: false;
+glx-swap-method: 1;
 transparent-clipping: false;
-xrender-sync-fence: false;
+xrender-sync-fence: true;
+use-damage = true;
+refresh-rate: 120;
 wintypes: {
     dock: { opacity: 1.0; shadow: false; full-shadow: false; };
     menu: { fade: false; opacity: false; shadow: false; full-shadow: false; };
@@ -40,7 +39,7 @@ blur-background-exclude: [
     "class_i = 'term'",
     "class_i = 'nwim'",
 ];
-blur: { method = "dual_kawase"; strength = 8.5; }
+blur: { method = "kernel"; kernel = "11x11gaussian"; };
 opacity-rule: [ "0:_NET_WM_STATE@:32a *= '_NET_WM_STATE_HIDDEN'" ];
 shadow: true;
 shadow-radius: +9.0;
