[polybar] fix negi3wm path

--- a/negi3wm/.config/polybar/modules.cfg
+++ b/negi3wm/.config/polybar/modules.cfg
@@ -1,6 +1,6 @@
 [module/ws]
 type = custom/script
-exec = PYTHONPATH=${XDG_CONFIG_HOME}/i3 python -u -m bin.polybar_ws 2> /dev/null
+exec = PYTHONPATH=${XDG_CONFIG_HOME}/negi3wm python -u -m bin.polybar_ws 2> /dev/null
 interval = 0
 format-background = ${color.mgf}
 format = "<label>"
@@ -10,7 +10,7 @@ tail = true
 
 [module/mpd]
 type = custom/script
-exec = PYTHONPATH=${XDG_CONFIG_HOME}/i3 python -u -m bin.polybar_mpd 2> /dev/null
+exec = PYTHONPATH=${XDG_CONFIG_HOME}/negi3wm python -u -m bin.polybar_mpd 2> /dev/null
 interval = 0
 format-background = ${color.mgf}
 tail = true
