[picom] use dual_kawase from picom-git

--- a/negi3wm/.config/picom/picom.conf
+++ b/negi3wm/.config/picom/picom.conf
@@ -39,7 +39,7 @@ blur-background-exclude: [
     "class_i = 'term'",
     "class_i = 'nwim'",
 ];
-blur: { method = "kernel"; kernel = "11x11gaussian"; };
+blur: { method = "dual_kawase"; blur-strengh=7; };
 opacity-rule: [ "0:_NET_WM_STATE@:32a *= '_NET_WM_STATE_HIDDEN'" ];
 shadow: true;
 shadow-radius: +9.0;
