[picom] use gaussian blur for now

--- a/negi3wm/.config/picom/picom.conf
+++ b/negi3wm/.config/picom/picom.conf
@@ -15,7 +15,7 @@ glx-swap-method: 1;
 transparent-clipping: false;
 xrender-sync-fence: true;
 use-damage = true;
-refresh-rate: 120;
+refresh-rate: 0;
 wintypes: {
     dock: { opacity: 1.0; shadow: false; full-shadow: false; };
     menu: { fade: false; opacity: false; shadow: false; full-shadow: false; };
@@ -39,7 +39,8 @@ blur-background-exclude: [
     "class_i = 'term'",
     "class_i = 'nwim'",
 ];
-blur: { method = "dual_kawase"; blur-strengh=7; };
+# blur: { method = "dual_kawase"; blur-strengh=7; };
+blur: { method = "gaussian"; size = 30; deviation = 128; };
 opacity-rule: [ "0:_NET_WM_STATE@:32a *= '_NET_WM_STATE_HIDDEN'" ];
 shadow: true;
 shadow-radius: +9.0;
