--- a/sys/.config/bpytop/bpytop.conf
+++ b/sys/.config/bpytop/bpytop.conf
@@ -1,4 +1,4 @@
-#? Config file for bpytop v. 1.0.57
+#? Config file for bpytop v. 1.0.67
 
 #* Color theme, looks for a .theme file in "/usr/[local/]share/bpytop/themes" and "~/.config/bpytop/themes", "Default" for builtin default theme.
 #* Prefix name by a plus sign (+) for a theme located in user themes folder, i.e. color_theme="+monokai"
@@ -10,7 +10,7 @@ theme_background=True
 #* Sets if 24-bit truecolor should be used, will convert 24-bit colors to 256 color (6x6x6 color cube) if false.
 truecolor=True
 
-#* Manually set which boxes to show. Available values are "cpu mem net proc", seperate values with whitespace.
+#* Manually set which boxes to show. Available values are "cpu mem net proc", separate values with whitespace.
 shown_boxes="cpu mem net proc"
 
 #* Update time in milliseconds, increases automatically if set below internal loops processing time, recommended 2000 ms or above for better sample times for graphs.
@@ -31,7 +31,7 @@ proc_reversed=False
 proc_tree=False
 
 #* Which depth the tree view should auto collapse processes at
-tree_depth=0
+tree_depth=3
 
 #* Use the cpu graph colors in the process list.
 proc_colors=True
@@ -45,6 +45,25 @@ proc_per_core=False
 #* Show process memory as bytes instead of percent
 proc_mem_bytes=True
 
+#* Sets the CPU stat shown in upper half of the CPU graph, "total" is always available, see:
+#* https://psutil.readthedocs.io/en/latest/#psutil.cpu_times for attributes available on specific platforms.
+#* Select from a list of detected attributes from the options menu
+cpu_graph_upper="total"
+
+#* Sets the CPU stat shown in lower half of the CPU graph, "total" is always available, see:
+#* https://psutil.readthedocs.io/en/latest/#psutil.cpu_times for attributes available on specific platforms.
+#* Select from a list of detected attributes from the options menu
+cpu_graph_lower="total"
+
+#* Toggles if the lower CPU graph should be inverted.
+cpu_invert_lower=True
+
+#* Set to True to completely disable the lower CPU graph.
+cpu_single_graph=False
+
+#* Shows the system uptime in the CPU box.
+show_uptime=True
+
 #* Check cpu temperature, needs "osx-cpu-temp" on MacOS X.
 check_temp=True
 
@@ -54,8 +73,14 @@ cpu_sensor=Auto
 #* Show temperatures for cpu cores also if check_temp is True and sensors has been found
 show_coretemp=True
 
+#* Which temperature scale to use, available values: "celsius", "fahrenheit", "kelvin" and "rankine"
+temp_scale="celsius"
+
+#* Show CPU frequency, can cause slowdowns on certain systems with some versions of psutil
+show_cpu_freq=True
+
 #* Draw a clock at top of screen, formatting according to strftime, empty string to disable.
-draw_clock="%X"
+draw_clock=""
 
 #* Update main ui in background when menus are showing, set this to false if the menus is flickering too much for comfort.
 background_update=True
@@ -64,7 +89,7 @@ background_update=True
 custom_cpu_name=""
 
 #* Optional filter for shown disks, should be full path of a mountpoint, separate multiple values with a comma ",".
-#* Begin line with "exclude=" to change to exclude filter, oterwise defaults to "most include" filter. Example: disks_filter="exclude=/boot, /home/user"
+#* Begin line with "exclude=" to change to exclude filter, otherwise defaults to "most include" filter. Example: disks_filter="exclude=/boot, /home/user"
 disks_filter=""
 
 #* Show graphs instead of meters for memory values.
@@ -85,17 +110,30 @@ only_physical=True
 #* Read disks list from /etc/fstab. This also disables only_physical.
 use_fstab=False
 
+#* Toggles if io stats should be shown in regular disk usage view
+show_io_stat=True
+
+#* Toggles io mode for disks, showing only big graphs for disk read/write speeds.
+io_mode=False
+
+#* Set to True to show combined read/write io graphs in io mode.
+io_graph_combined=False
+
+#* Set the top speed for the io graphs in MiB/s (10 by default), use format "device:speed" separate disks with a comma ",".
+#* Example: "/dev/sda:100, /dev/sdb:20"
+io_graph_speeds=""
+
 #* Set fixed values for network graphs, default "10M" = 10 Mibibytes, possible units "K", "M", "G", append with "bit" for bits instead of bytes, i.e "100mbit"
 net_download="10M"
 net_upload="10M"
 
 #* Start in network graphs auto rescaling mode, ignores any values set above and rescales down to 10 Kibibytes at the lowest.
-net_auto=False
+net_auto=True
 
 #* Sync the scaling for download and upload to whichever currently has the highest scale
 net_sync=False
 
-#* If the network graphs color gradient should scale to bandwith usage or auto scale, bandwith usage is based on "net_download" and "net_upload" values
+#* If the network graphs color gradient should scale to bandwidth usage or auto scale, bandwidth usage is based on "net_download" and "net_upload" values
 net_color_fixed=False
 
 #* Starts with the Network Interface specified here.
@@ -105,7 +143,7 @@ net_iface=""
 show_battery=False
 
 #* Show init screen at startup, the init screen is purely cosmetical
-show_init=True
+show_init=False
 
 #* Enable check for new version from github.com/aristocratos/bpytop at start.
 update_check=True
