--- a/sys/.config/tmux/tmux.conf
+++ b/sys/.config/tmux/tmux.conf
@@ -32,7 +32,7 @@ run '~/.config/tmux/plugins/tpm/tpm'
 
 set -g update-environment "DISPLAY SSH_ASKPASS SSH_AUTH_SOCK SSH_AGENT_PID SSH_CONNECTION WINDOWID XAUTHORITY"
 set-window-option -g mode-keys vi
-set -wg mode-style bg=colour236,fg=colour247
+set -wg mode-style bg=black,fg=color110,bold,italics
 set -g default-shell ${SHELL}
 set -g default-command ${SHELL}
 
