--- a/sys/.config/systemd/user/pix-fasd.service
+++ b/sys/.config/systemd/user/pix-fasd.service
@@ -4,8 +4,10 @@ After=sockets.target
 
 [Service]
 Type=simple
-Restart=always
-ExecStart=/home/neg/bin/scripts/pic-dirs-list
+ExecStart=/bin/dash -c '%h/bin/scripts/pic-dirs-list'
+PassEnvironment=XDG_PICTURES_DIR XDG_DATA_HOME
+Restart=on-failure
+RestartSec=1
 
 [Install]
 WantedBy=default.target
