--- a/music/.config/mpd/mpd.conf
+++ b/music/.config/mpd/mpd.conf
@@ -16,20 +16,7 @@ replaygain "off"
 auto_update "yes"
 
 input {
-    plugin "curl"
-}
-
-input {
     plugin "soundcloud"
-}
-
-input {
-    plugin "qobuz"
-}
-
-resampler {
-    plugin "soxr"
-    quality "very high"
 }
 
 audio_output {
@@ -37,6 +24,14 @@ audio_output {
     media_role "music"
     name "Pulseaudio"
     mixer_type "hardware"
+    auto_resample "no"
+    auto_channels "no"
+    auto_format "no"
+}
+
+decoder {
+    plugin "hybrid_dsd"
+    enabled "yes"
 }
 
 audio_output {
