[mpd] return alsa support

--- a/music/.config/mpd/mpd.conf
+++ b/music/.config/mpd/mpd.conf
@@ -35,6 +35,20 @@ decoder {
 }
 
 audio_output {
+    type "alsa"
+    name "Gustard X26Pro"
+    device "hw:0"
+    auto_resample "yes"
+    auto_format "yes"
+    auto_channels "yes"
+    replay_gain_handler "none"
+    mixer_type "hardware"
+    dsd_native "yes"
+    dop "no"
+    tags "yes"
+}
+
+audio_output {
     type "fifo"
     name "FIFO"
     path "/tmp/audio.fifo"
