[ssh] disable control master

--- a/sys/.ssh/config
+++ b/sys/.ssh/config
@@ -2,9 +2,6 @@
 User neg
 Ciphers aes128-gcm@openssh.com,aes256-gcm@openssh.com,chacha20-poly1305@openssh.com,aes256-ctr,aes192-ctr,aes128-ctr
 Compression no
-ControlMaster auto
-ControlPersist 10
-ControlPath ~/.ssh/control-master-%r@%h:%p
 
 Host *
   PasswordAuthentication no
@@ -14,6 +11,6 @@ Host *
   ForwardX11Trusted yes
   AddKeysToAgent yes
   EscapeChar `
-  ControlMaster auto
-  ControlPersist 72000
-  ControlPath ~/.ssh/control-master/sock-%C
+  # ControlMaster auto
+  # ControlPersist 72000
+  # ControlPath ~/.ssh/control-master-sock-%C
