[tmux] better selection color

--- a/sys/.config/tmux/tmux.conf
+++ b/sys/.config/tmux/tmux.conf
@@ -32,7 +32,7 @@ run '~/.config/tmux/plugins/tpm/tpm'
 
 set -g update-environment "DISPLAY SSH_ASKPASS SSH_AUTH_SOCK SSH_AGENT_PID SSH_CONNECTION WINDOWID XAUTHORITY"
 set-window-option -g mode-keys vi
-set -wg mode-style bg=black,fg=color110,bold,italics
+set -wg mode-style "bg=#000008","fg=#367bbf",bold
 set -g default-shell ${SHELL}
 set -g default-command ${SHELL}
 
