[pulseaudio] enable realtime priority

--- a/music/.config/pulse/daemon.conf
+++ b/music/.config/pulse/daemon.conf
@@ -7,5 +7,9 @@ flat-volumes = false
 resample-method = soxr-vhq
 rlimit-rttime = -1
 exit-idle-time = -1
-# default-fragments = 2
-# default-fragment-size-msec = 25
+high-priority = yes
+nice-level = -11
+realtime-scheduling = yes
+realtime-priority = 5
+default-fragments = 2
+default-fragment-size-msec = 25
