[systemd] update mpd.service

--- a/sys/.config/systemd/user/mpd.service
+++ b/sys/.config/systemd/user/mpd.service
@@ -7,9 +7,17 @@ After=network.target sound.target
 Type=notify
 ExecStart=/usr/bin/mpd --no-daemon
 
-# allow MPD to use real-time priority 50
-LimitRTPRIO=50
+# Enable this setting to ask systemd to watch over MPD, see
+# systemd.service(5).  This is disabled by default because it causes
+# periodic wakeups which are unnecessary if MPD is not playing.
+#WatchdogSec=120
+
+# allow MPD to use real-time priority 40
+LimitRTPRIO=40
 LimitRTTIME=infinity
+
+# for io_uring
+LimitMEMLOCK=64M
 
 # disallow writing to /usr, /bin, /sbin, ...
 ProtectSystem=yes
@@ -21,6 +29,11 @@ ProtectControlGroups=yes
 # AF_NETLINK is required by libsmbclient, or it will exit() .. *sigh*
 RestrictAddressFamilies=AF_INET AF_INET6 AF_UNIX AF_NETLINK
 RestrictNamespaces=yes
+
+# Note that "ProtectKernelModules=yes" is missing in the user unit
+# because systemd 232 is unable to reduce its own capabilities
+# ("Failed at step CAPABILITIES spawning /usr/bin/mpd: Operation not
+# permitted")
 
 [Install]
 WantedBy=default.target
