--- a/negi3wm/.config/picom/picom.conf
+++ b/negi3wm/.config/picom/picom.conf
@@ -41,7 +41,10 @@ blur-background-exclude: [
 ];
 # blur: { method = "dual_kawase"; blur-strengh=7; };
 blur: { method = "gaussian"; size = 30; deviation = 128; };
-opacity-rule: [ "0:_NET_WM_STATE@:32a *= '_NET_WM_STATE_HIDDEN'" ];
+opacity-rule: [
+    "0:_NET_WM_STATE@:32a *= '_NET_WM_STATE_HIDDEN'",
+    "80:class_g = 'i3-frame'"
+];
 shadow: true;
 shadow-radius: +9.0;
 shadow-offset-x: -9.0;
