[ssh] update config

--- a/sys/.ssh/config
+++ b/sys/.ssh/config
@@ -1,16 +1,18 @@
-# global options
-User neg
-Ciphers aes128-gcm@openssh.com,aes256-gcm@openssh.com,chacha20-poly1305@openssh.com,aes256-ctr,aes192-ctr,aes128-ctr
+Include config.d/*
 Compression no
 
 Host *
-  PasswordAuthentication no
-  KbdInteractiveAuthentication no
-  ChallengeResponseAuthentication no
-  ExitOnForwardFailure yes
-  ForwardX11Trusted yes
   AddKeysToAgent yes
+  ChallengeResponseAuthentication no
   EscapeChar `
-  # ControlMaster auto
-  # ControlPersist 72000
-  # ControlPath ~/.ssh/control-master-sock-%C
+  ExitOnForwardFailure yes
+  ForwardAgent yes
+  ForwardX11Trusted yes
+  KbdInteractiveAuthentication no
+  PreferredAuthentications publickey,keyboard-interactive,password
+  PubkeyAcceptedKeyTypes=+ssh-dss
+  StrictHostKeyChecking no
+
+Host github.com
+    HostName github.com
+    User git
