--- a/music/.config/pulse/daemon.conf
+++ b/music/.config/pulse/daemon.conf
@@ -1,15 +1,17 @@
+alternate-sample-rate = 44100
+avoid-resampling = yes
+default-fragments = 3
+default-fragment-size-msec = 230
 default-sample-format = s32le
 default-sample-rate = 48000
-alternate-sample-rate = 44100
-realtime-scheduling = true
-avoid-resampling = yes
-flat-volumes = false
-resample-method = soxr-vhq
-rlimit-rttime = -1
 exit-idle-time = -1
+exit-idle-time = -1
+flat-volumes = no
 high-priority = yes
 nice-level = -11
-realtime-scheduling = yes
 realtime-priority = 5
-default-fragments = 2
-default-fragment-size-msec = 25
+realtime-priority = 9
+realtime-scheduling = yes
+resample-method = soxr-vhq
+rlimit-rtprio = 9
+rlimit-rttime = -1
