[polybar] new network name

--- a/negi3wm/.config/polybar/modules.cfg
+++ b/negi3wm/.config/polybar/modules.cfg
@@ -35,7 +35,7 @@ format-prefix = "${templates.keyboard_prefix}"
 
 [module/network]
 type = internal/network
-interface = p3p2
+interface = eth3
 interval = 1.0
 accumulate-stats = false # Accumulate values from all interfaces
 ping-interval = 60.0
