[picom] transparent zathura

--- a/negi3wm/.config/picom/picom.conf
+++ b/negi3wm/.config/picom/picom.conf
@@ -43,7 +43,8 @@ blur-background-exclude: [
 blur: { method = "gaussian"; size = 30; deviation = 128; };
 opacity-rule: [
     "0:_NET_WM_STATE@:32a *= '_NET_WM_STATE_HIDDEN'",
-    "80:class_g = 'i3-frame'"
+    "80:class_g = 'i3-frame'",
+    "95:class_g = 'Zathura'"
 ];
 shadow: true;
 shadow-radius: +9.0;
