--- a/negi3wm/.config/polybar/modules.cfg
+++ b/negi3wm/.config/polybar/modules.cfg
@@ -33,7 +33,27 @@ format-background = ${color.mgf}
 format-suffix = ""
 format-prefix = "${templates.keyboard_prefix}"
 
-[module/network]
+[module/network-eth1]
+type = internal/network
+interface = eth1
+interval = 1.0
+accumulate-stats = false # Accumulate values from all interfaces
+ping-interval = 60.0
+label-connected = "${templates.network}"
+format-connected-background = ${color.mgf}
+format-disconnected-background = ${color.mgf}
+
+[module/network-eth2]
+type = internal/network
+interface = eth2
+interval = 1.0
+accumulate-stats = false # Accumulate values from all interfaces
+ping-interval = 60.0
+label-connected = "${templates.network}"
+format-connected-background = ${color.mgf}
+format-disconnected-background = ${color.mgf}
+
+[module/network-eth3]
 type = internal/network
 interface = eth3
 interval = 1.0
@@ -41,4 +61,5 @@ accumulate-stats = false # Accumulate values from all interfaces
 ping-interval = 60.0
 label-connected = "${templates.network}"
 format-connected-background = ${color.mgf}
+format-disconnected-background = ${color.mgf}
 ; vim: set ft=dosini:
