--- a/negi3wm/.config/polybar/modules.cfg
+++ b/negi3wm/.config/polybar/modules.cfg
@@ -37,7 +37,7 @@ format-prefix = "${templates.keyboard_prefix}"
 type = internal/network
 interface = eth1
 interval = 1.0
-accumulate-stats = false # Accumulate values from all interfaces
+accumulate-stats = false
 ping-interval = 60.0
 label-connected = "${templates.network}"
 format-connected-background = ${color.mgf}
@@ -47,7 +47,7 @@ format-disconnected-background = ${color.mgf}
 type = internal/network
 interface = eth2
 interval = 1.0
-accumulate-stats = false # Accumulate values from all interfaces
+accumulate-stats = false
 ping-interval = 60.0
 label-connected = "${templates.network}"
 format-connected-background = ${color.mgf}
@@ -57,7 +57,7 @@ format-disconnected-background = ${color.mgf}
 type = internal/network
 interface = eth3
 interval = 1.0
-accumulate-stats = false # Accumulate values from all interfaces
+accumulate-stats = false
 ping-interval = 60.0
 label-connected = "${templates.network}"
 format-connected-background = ${color.mgf}
