[polybar] cleanup, better visual

--- a/negi3wm/.config/polybar/decor.cfg
+++ b/negi3wm/.config/polybar/decor.cfg
@@ -7,13 +7,13 @@ content-foreground = ${color.mgf}
 type = custom/text
 content = "%{T3}%{F-}%{T-}"
 content-background = ${color.mgf}
-content-foreground = "${color.start_end}"
+content-foreground = "${color.dark}"
 
 [module/end]
 type = custom/text
 content = "%{T3}%{T-}"
 content-background = ${color.mgf}
-content-foreground = "${color.start_end}"
+content-foreground = "${color.dark}"
 
 [module/start-dark]
 type = custom/text
