--- a/negi3wm/.config/polybar/modules.cfg
+++ b/negi3wm/.config/polybar/modules.cfg
@@ -1,7 +1,6 @@
 [module/ws]
 type = custom/script
 exec = PYTHONPATH=${XDG_CONFIG_HOME}/negi3wm python -u -m bin.polybar_ws 2> /dev/null
-interval = 0
 format-background = ${color.mgf}
 format = "<label>"
 format-suffix = " "
@@ -11,7 +10,6 @@ tail = true
 [module/mpd]
 type = custom/script
 exec = PYTHONPATH=${XDG_CONFIG_HOME}/negi3wm python -u -m bin.polybar_mpd 2> /dev/null
-interval = 0
 format-background = ${color.mgf}
 tail = true
 
@@ -33,33 +31,13 @@ format-background = ${color.mgf}
 format-suffix = ""
 format-prefix = "${templates.keyboard_prefix}"
 
-[module/network-eth1]
+[module/net]
 type = internal/network
-interface = eth1
+interface = ${env:ACTIVE_NETWORK_IFACE}
 interval = 1.0
 accumulate-stats = false
 ping-interval = 60.0
 label-connected = "${templates.network}"
+speed-unit =
 format-connected-background = ${color.mgf}
 format-disconnected-background = ${color.mgf}
-
-[module/network-eth2]
-type = internal/network
-interface = eth2
-interval = 1.0
-accumulate-stats = false
-ping-interval = 60.0
-label-connected = "${templates.network}"
-format-connected-background = ${color.mgf}
-format-disconnected-background = ${color.mgf}
-
-[module/network-eth3]
-type = internal/network
-interface = eth3
-interval = 1.0
-accumulate-stats = false
-ping-interval = 60.0
-label-connected = "${templates.network}"
-format-connected-background = ${color.mgf}
-format-disconnected-background = ${color.mgf}
-; vim: set ft=dosini:
