[git] update gitignore

--- a/.gitignore
+++ b/.gitignore
@@ -305,3 +305,4 @@ zsh/.zsh/zcomp-sanctum
 ../../music/.config/pulse/cookiegs
 ../../music/.config/pulse/cookie
 music/.config/pulse/cookie
+dev/.config/nvim/lua/packer_compiled.lua
