[picom] tooltip no focus

--- a/negi3wm/.config/picom/picom.conf
+++ b/negi3wm/.config/picom/picom.conf
@@ -20,7 +20,7 @@ wintypes: {
     dock: { opacity: 1.0; shadow: false; full-shadow: false; };
     menu: { fade: false; opacity: false; shadow: false; full-shadow: false; };
     utility: { fade: false; opacity: false; shadow: false; full-shadow: false; };
-    tooltip: { fade: false; opacity: false; shadow: false; full-shadow: false; };
+    tooltip: { fade: false; opacity: false; shadow: false; full-shadow: false; focus: false };
     dropdown_menu: { opacity: 0.89; fade: false; shadow: false; full-shadow: false; };
     popup_menu: { opacity: 0.89; fade: false; shadow: false; full-shadow: false; };
 };
