[git] update gitignore

--- a/.gitignore
+++ b/.gitignore
@@ -306,3 +306,4 @@ zsh/.zsh/zcomp-sanctum
 ../../music/.config/pulse/cookie
 music/.config/pulse/cookie
 dev/.config/nvim/lua/packer_compiled.lua
+negi3wm/.config/i3/
