--- a/music/.config/pulse/daemon.conf
+++ b/music/.config/pulse/daemon.conf
@@ -1,7 +1,9 @@
-alternate-sample-rate = 44100
 avoid-resampling = yes
 default-sample-format = s32le
-default-sample-rate = 48000
+default-sample-rate = 44100
+alternate-sample-rate = 48000
+#alternate-sample-rate = 352800
+#default-sample-rate = 384000
 exit-idle-time = -1
 exit-idle-time = -1
 flat-volumes = no
