--- a/.gitignore
+++ b/.gitignore
@@ -307,3 +307,4 @@ zsh/.zsh/zcomp-sanctum
 music/.config/pulse/cookie
 dev/.config/nvim/lua/packer_compiled.lua
 negi3wm/.config/i3/
+music/.config/pulse/*-default-*
