[ncmpcpp] custom track notification

--- a/music/.config/ncmpcpp/config
+++ b/music/.config/ncmpcpp/config
@@ -81,4 +81,5 @@ visualizer_in_stereo = "no"
 visualizer_color = 091,097,108,104,99,105,111
 visualizer_look = "▞▋"
 visualizer_type = ellipse
+execute_on_song_change="~/.config/ncmpcpp/track-notify"
 #  vim: set ts=2 sw=2 tw=0 :
