--- a/music/.config/mpd/mpd.conf
+++ b/music/.config/mpd/mpd.conf
@@ -32,7 +32,7 @@ audio_output {
 audio_output {
     type "alsa"
     name "Gustard X26Pro"
-    device "hw:2,0"
+    device "hw:CARD=G20"
     auto_resample "yes"
     auto_format "yes"
     auto_channels "yes"
