[mpd] force disabling resample via mpd

--- a/music/.config/mpd/mpd.conf
+++ b/music/.config/mpd/mpd.conf
@@ -33,9 +33,9 @@ audio_output {
     type "alsa"
     name "Gustard X26Pro"
     device "hw:CARD=G20"
-    auto_resample "yes"
-    auto_format "yes"
-    auto_channels "yes"
+    auto_resample "no"
+    auto_format "no"
+    auto_channels "no"
     replay_gain_handler "none"
     dsd_native "yes"
     dop "no"
