--- a/music/.config/mpd/mpd.conf
+++ b/music/.config/mpd/mpd.conf
@@ -15,8 +15,8 @@ connection_timeout "2"
 replaygain "off"
 auto_update "yes"
 
-input {
-    plugin "soundcloud"
+input_cache {
+    size "1 GB"
 }
 
 audio_output {
