[mpd] experimental add pipewire support

--- a/music/.config/mpd/mpd.conf
+++ b/music/.config/mpd/mpd.conf
@@ -43,6 +43,12 @@ audio_output {
 }
 
 audio_output {
+    type "pipewire"
+    name "PipeWire Sound Server"
+    dsd yes
+}
+
+audio_output {
     type "fifo"
     name "FIFO"
     path "/tmp/audio.fifo"
