[mpd] add mad decoder

--- a/music/.config/mpd/mpd.conf
+++ b/music/.config/mpd/mpd.conf
@@ -19,6 +19,11 @@ input_cache {
     size "1 GB"
 }
 
+decoder {
+    plugin "mad"
+    enabled "yes"
+}
+
 audio_output {
     type "pulse"
     media_role "music"
@@ -45,7 +50,7 @@ audio_output {
 audio_output {
     type "pipewire"
     name "PipeWire Sound Server"
-    dsd yes
+    dsd "yes"
 }
 
 audio_output {
