[mpd] mixer_type: none

--- a/music/.config/mpd/mpd.conf
+++ b/music/.config/mpd/mpd.conf
@@ -14,6 +14,7 @@ follow_inside_symlinks "yes"
 connection_timeout "2"
 replaygain "off"
 auto_update "yes"
+mixer_type "none"
 
 input_cache {
     size "1 GB"
@@ -28,7 +29,6 @@ audio_output {
     type "pulse"
     media_role "music"
     name "Pulseaudio"
-    mixer_type "hardware"
     auto_resample "no"
     auto_channels "no"
     auto_format "no"
