--- a/.gitignore
+++ b/.gitignore
@@ -308,3 +308,4 @@ music/.config/pulse/cookie
 dev/.config/nvim/lua/packer_compiled.lua
 negi3wm/.config/i3/
 music/.config/pulse/*-default-*
+packer/
