--- a/sys/.config/tmux/tmux.conf
+++ b/sys/.config/tmux/tmux.conf
@@ -48,6 +48,7 @@ set -g renumber-windows on
 set -g default-terminal "tmux-256color" # tmux-256color by default
 set-option -ga terminal-overrides ",tmux*:Tc"
 set-option -ga terminal-overrides ",alacritty*:Tc"
+set-option -ga terminal-overrides ",xterm*:Tc"
 
 set -g bell-action any # listen for activity on all windows
 set -g base-index 1 # start window indexing at one instead of zero
