[picom] support wclass

--- a/negi3wm/.config/picom/picom.conf
+++ b/negi3wm/.config/picom/picom.conf
@@ -38,6 +38,8 @@ blur-background-exclude: [
     "class_g = 'slop'",
     "class_i = 'term'",
     "class_i = 'nwim'",
+    "class_g = 'term'",
+    "class_g = 'nwim'",
 ];
 # blur: { method = "dual_kawase"; blur-strengh=7; };
 blur: { method = "gaussian"; size = 30; deviation = 128; };
