[tmux] do not change titles

--- a/sys/.config/tmux/tmux.conf
+++ b/sys/.config/tmux/tmux.conf
@@ -53,8 +53,8 @@ set-option -ga terminal-overrides ",xterm*:Tc"
 set -g bell-action any # listen for activity on all windows
 set -g base-index 1 # start window indexing at one instead of zero
 set -g pane-border-style fg=blue,bg=default # border colours
-set -g set-titles on # wm window title string (uses statusbar variables)
-setw -g automatic-rename yes # enable wm window titles
+set -g set-titles off # wm window title string (uses statusbar variables)
+setw -g automatic-rename off # enable wm window titles
 set-option -g visual-activity on
 set -g status-keys emacs
 set -g message-style fg=white,bg=black
