--- a/sys/.config/systemd/user/xinit.service
+++ b/sys/.config/systemd/user/xinit.service
@@ -4,7 +4,7 @@ Description=startx as service
 [Service]
 Environment="XINITRC=%h/.config/xinit/xinitrc"
 Environment="XSERVERRC=%h/.config/xinit/xserverrc"
-ExecStart=%h/bin/runx
+ExecStart=/usr/bin/xinit -- :1 -nolisten tcp vt1
 Restart=on-abort
 
 [Install]
