[systemd] add i3-session.target

--- a/sys/.config/systemd/user/wallpaper.service
+++ b/sys/.config/systemd/user/wallpaper.service
@@ -1,11 +1,8 @@
 [Unit]
 Description=Setup wallpaper on startup
-After=xorg.service
+After=i3-wm.service
 
 [Service]
 Type=forking
 ExecStart=%h/bin/wl -r
 Restart=on-failure
-
-[Install]
-WantedBy=default.target
