--- a/sys/.ssh/config
+++ b/sys/.ssh/config
@@ -12,6 +12,8 @@ Host *
   PreferredAuthentications publickey,keyboard-interactive,password
   PubkeyAcceptedKeyTypes=+ssh-dss
   StrictHostKeyChecking no
+  IdentityFile ~/.ssh/id_neg_ecdsa
+  IdentityFile ~/.ssh/id_neg_ed25519
 
 Host github.com
     HostName github.com
