--- a/sys/.config/systemd/user/xorg.service
+++ b/sys/.config/systemd/user/xorg.service
@@ -8,6 +8,7 @@ Before=x11.target
 [Service]
 Environment="XINITRC=%h/.config/xinit/xinitrc"
 Environment="XSERVERRC=%h/.config/xinit/xserverrc"
+ExecStartPre=/usr/bin/dbus-update-activation-environment --all
 ExecStart=/usr/bin/xinit -- :1 -nolisten tcp vt1
 SuccessExitStatus=0 1
 
