--- a/sys/.config/systemd/user/transmissiond.service
+++ b/sys/.config/systemd/user/transmissiond.service
@@ -4,7 +4,7 @@ After=network.target
 
 [Service]
 Type=notify
-ExecStart=/usr/bin/transmission-daemon -g /home/neg/.config/transmission-daemon -f --log-error
+ExecStart=/usr/bin/transmission-daemon -g %E/transmission-daemon -f --log-error
 Restart=on-failure
 RestartSec=30
 ExecReload=/bin/kill -s HUP $MAINPID
