--- a/sys/.config/systemd/user/xorg.service
+++ b/sys/.config/systemd/user/xorg.service
@@ -6,10 +6,10 @@ After=x11.socket
 Before=x11.target
 
 [Service]
-Environment="XINITRC=%h/.config/xinit/xinitrc"
-Environment="XSERVERRC=%h/.config/xinit/xserverrc"
+Environment="XINITRC=%E/xinit/xinitrc"
+Environment="XSERVERRC=%E/xinit/xserverrc"
 ExecStartPre=/usr/bin/dbus-update-activation-environment --all
-ExecStart=/usr/bin/xinit -- :1 -nolisten tcp vt1
+ExecStart=/usr/bin/xinit -- :0 -nolisten tcp vt1
 SuccessExitStatus=0 1
 
 [Install]
