--- a/negi3wm/.config/picom/picom.conf
+++ b/negi3wm/.config/picom/picom.conf
@@ -46,7 +46,12 @@ blur: { method = "gaussian"; size = 30; deviation = 128; };
 opacity-rule: [
     "0:_NET_WM_STATE@:32a *= '_NET_WM_STATE_HIDDEN'",
     "80:class_g = 'i3-frame'",
-    "95:class_g = 'Zathura'"
+    "95:class_g = 'Zathura'",
+    "100:_GTK_FRAME_EXTENTS@:c",
+    "100:fullscreen",
+    "100:name = 'Zoom Meeting'",
+    "100:name = 'zoom_linux_float_video_window'",
+    "100:class_g = 'mpv'",
 ];
 shadow: true;
 shadow-radius: +9.0;
