[tmux] fix typo

--- a/sys/.config/tmux/tmux.conf
+++ b/sys/.config/tmux/tmux.conf
@@ -54,7 +54,7 @@ set -g bell-action any # listen for activity on all windows
 set -g base-index 1 # start window indexing at one instead of zero
 set -g pane-border-style fg=blue,bg=default # border colours
 set -g set-titles off # wm window title string (uses statusbar variables)
-setw -g automatic-rename off # enable wm window titles
+setw -g automatic-rename off # disable wm window titles
 set-option -g visual-activity on
 set -g status-keys emacs
 set -g message-style fg=white,bg=black
