--- a/music/.config/mpd/mpd.conf
+++ b/music/.config/mpd/mpd.conf
@@ -20,18 +20,10 @@ input_cache {
     size "1 GB"
 }
 
-decoder {
-    plugin "mad"
-    enabled "yes"
-}
-
 audio_output {
     type "pulse"
     media_role "music"
     name "Pulseaudio"
-    auto_resample "no"
-    auto_channels "no"
-    auto_format "no"
 }
 
 audio_output {
@@ -49,7 +41,7 @@ audio_output {
 
 audio_output {
     type "pipewire"
-    name "PipeWire Sound Server"
+    name "PipeWire"
     dsd "yes"
 }
 
