--- a/sys/.config/systemd/user/polybar.service
+++ b/sys/.config/systemd/user/polybar.service
@@ -4,4 +4,5 @@ PartOf=graphical-session.target
 
 [Service]
 ExecStart=/usr/bin/polybar -q main
+ExecStop=%h/.local/bin/polybar-msg cmd quit
 Restart=on-failure
