--- a/negi3wm/.config/polybar/modules.cfg
+++ b/negi3wm/.config/polybar/modules.cfg
@@ -33,7 +33,7 @@ format-prefix = "${templates.keyboard_prefix}"
 
 [module/net]
 type = internal/network
-interface = eth1
+interface = net1
 interval = 1.0
 accumulate-stats = false
 ping-interval = 60.0
