[systemd] negi3wm use more simple start

--- a/sys/.config/systemd/user/negi3wm.service
+++ b/sys/.config/systemd/user/negi3wm.service
@@ -1,7 +1,10 @@
 [Unit]
 Description=Negi3WM Window Manager mod for i3wm
 PartOf=graphical-session.target
+StartLimitBurst=5
+StartLimitIntervalSec=1
 
 [Service]
-ExecStart=%E/negi3wm/bin/negi3wm_run
+Type=simple
+ExecStart=/usr/bin/env dash %E/negi3wm/bin/run
 Restart=on-failure
