[polybar] new network speed script

--- a/negi3wm/.config/polybar/modules.cfg
+++ b/negi3wm/.config/polybar/modules.cfg
@@ -32,12 +32,10 @@ format-suffix = " "
 format-prefix = "${templates.keyboard_prefix}"
 
 [module/net]
-type = internal/network
-interface = net1
-interval = 1.0
-accumulate-stats = false
-ping-interval = 60.0
-label-connected = "${templates.network}"
-speed-unit =
-format-connected-background = ${color.mgf}
-format-disconnected-background = ${color.mgf}
+type = custom/script
+exec = python /home/neg/bin/net net1
+format = "<label>"
+format-background = ${color.mgf}
+format-suffix = " "
+format-prefix = " "
+tail = true
