--- a/sys/.config/systemd/user/polybar.service
+++ b/sys/.config/systemd/user/polybar.service
@@ -3,6 +3,7 @@ Description=Polybar statusbar
 PartOf=graphical-session.target
 
 [Service]
+Type=forking
 ExecStart=/usr/bin/polybar -q main
 ExecStop=%h/.local/bin/polybar-msg cmd quit
 Restart=on-failure
