--- a/sys/.config/systemd/user/polybar.service
+++ b/sys/.config/systemd/user/polybar.service
@@ -1,9 +1,11 @@
 [Unit]
 Description=Polybar statusbar
 PartOf=graphical-session.target
+StartLimitIntervalSec=60
 
 [Service]
-Type=forking
 ExecStart=/usr/bin/polybar -q main
 ExecStop=%h/.local/bin/polybar-msg cmd quit
 Restart=on-failure
+RestartSec=3
+StartLimitBurst=30
