--- a/sys/.config/systemd/user/tmux_term.service
+++ b/sys/.config/systemd/user/tmux_term.service
@@ -1,9 +1,9 @@
 [Unit]
 Description=Start tmux in detached session
-After=getty.target
+After=sockets.target
 
 [Service]
-Type=forking
+Type=simple
 ExecStart=/usr/bin/tmux -S /home/neg/.config/negi3wm/cache/tmux_sockets/term.socket new-session -s term -d
 ExecStop=/usr/bin/tmux -S /home/neg/.config/negi3wm/cache/tmux_sockets/term.socket kill-session -t term
 RemainAfterExit=yes
