--- a/negi3wm/.config/alacritty/alacritty.yml
+++ b/negi3wm/.config/alacritty/alacritty.yml
@@ -4,8 +4,8 @@ env:
 
 window:
   dimensions:
-    columns: 0
-    lines: 0
+    columns: 80
+    lines: 60
   padding:
     x: 2
     y: 2
@@ -13,7 +13,7 @@ window:
   dynamic_padding: false
   dynamic_title: false
   gtk_theme_variant: dark
-  startup_mode: Maximized
+  startup_mode: Windowed
   opacity: 0.88
 
 font:
