--- a/negi3wm/.config/kitty/kitty.conf
+++ b/negi3wm/.config/kitty/kitty.conf
@@ -1,4 +1,3 @@
-# vim:fileencoding=utf-8:foldmethod=marker
 font_family      Iosevka Medium Nerd Font Complete Mono
 bold_font        Iosevka Bold Nerd Font Complete Mono
 italic_font      Iosevka Italic Nerd Font Complete Mono
@@ -150,10 +149,6 @@ mouse_map shift+left          triplepress ungrabbed,grabbed mouse_selection line
 mouse_map shift+ctrl+alt+left triplepress ungrabbed,grabbed mouse_selection line_from_point
 mouse_map shift+right press ungrabbed,grabbed mouse_selection extend
 
-#: Performance tuning {{{
-
-repaint_delay 4
-
 #: Delay (in milliseconds) between screen updates. Decreasing it,
 #: increases frames-per-second (FPS) at the cost of more CPU usage.
 #: The default value yields ~100 FPS which is more than sufficient for
@@ -161,25 +156,16 @@ repaint_delay 4
 #: set sync_to_monitor to no or use a monitor with a high refresh
 #: rate. Also, to minimize latency when there is pending input to be
 #: processed, repaint_delay is ignored.
-
-input_delay 1
+repaint_delay 4
 
 #: Delay (in milliseconds) before input from the program running in
 #: the terminal is processed. Note that decreasing it will increase
 #: responsiveness, but also increase CPU usage and might cause flicker
 #: in full screen programs that redraw the entire screen on each loop,
 #: because kitty is so fast that partial screen updates will be drawn.
+input_delay 1
 
-sync_to_monitor yes
-
-#: Sync screen updates to the refresh rate of the monitor. This
-#: prevents tearing (https://en.wikipedia.org/wiki/Screen_tearing)
-#: when scrolling. However, it limits the rendering speed to the
-#: refresh rate of your monitor. With a very high speed mouse/high
-#: keyboard repeat rate, you may notice some slight input latency. If
-#: so, set this to no.
-
-#: }}}
+sync_to_monitor no
 
 enable_audio_bell no
 visual_bell_duration 0.0
@@ -233,27 +219,7 @@ tab_bar_background none
 
 foreground #dddddd
 background #000000
-background_opacity 1.0
-
-#: The opacity of the background. A number between 0 and 1, where 1 is
-#: opaque and 0 is fully transparent.  This will only work if
-#: supported by the OS (for instance, when using a compositor under
-#: X11). Note that it only sets the background color's opacity in
-#: cells that have the same background color as the default terminal
-#: background. This is so that things like the status bar in vim,
-#: powerline prompts, etc. still look good.  But it means that if you
-#: use a color theme with a background color in your editor, it will
-#: not be rendered as transparent.  Instead you should change the
-#: default background color in your kitty config and not use a
-#: background color in the editor color scheme. Or use the escape
-#: codes to set the terminals default colors in a shell script to
-#: launch your editor.  Be aware that using a value less than 1.0 is a
-#: (possibly significant) performance hit.  If you want to dynamically
-#: change transparency of windows set dynamic_background_opacity to
-#: yes (this is off by default as it has a performance cost). Changing
-#: this setting when reloading the config will only work if
-#: dynamic_background_opacity was enabled in the original config.
-
+background_opacity 0.88
 background_image none
 background_image_layout tiled
 background_image_linear no
@@ -385,22 +351,6 @@ map kitty_mod+a>d    set_background_opacity default
 map kitty_mod+delete clear_terminal reset active
 
 map kitty_mod+f5 load_config_file
-
-#: Reload kitty.conf, applying any changes since the last time it was
-#: loaded. Note that a handful of settings cannot be dynamically
-#: changed and require a full restart of kitty.  You can also map a
-#: keybinding to load a different config file, for example::
-
-#:     map f5 load_config /path/to/alternative/kitty.conf
-
-#: Note that all setting from the original kitty.conf are discarded,
-#: in other words the new conf settings *replace* the old ones.
-
 map kitty_mod+f6 debug_config
 
-#: Show details about exactly what configuration kitty is running with
-#: and its host environment. Useful for debugging issues.
-
-
-#: You can tell kitty to send arbitrary (UTF-8) encoded text to the
-#: client program when pressing specified shortcut keys. For example::
+# vim:fileencoding=utf-8:foldmethod=marker
